feat: add BaseHead component for SEO and global metadata management, fonts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,11 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
-import Hero from '../components/Hero.astro';
+import Layout from "../layouts/Layout.astro";
+import Hero from "../components/Hero.astro";
 ---
 
-<MainLayout>
+<Layout
+  title="Inicio"
+  description="Condor Expeditions es una operadora de turismo de aventura especializada en expediciones personalizadas en Ecuador."
+>
   <Hero />
-</MainLayout>
+</Layout>
