--- a/src/components/shared/BaseHead.astro
+++ b/src/components/shared/BaseHead.astro
@@ -6,32 +6,30 @@ import { join } from "node:path";
 import { AstroFont } from "astro-font";
 
 export interface Props {
-  title: string;
-  description?: string;
-  ogImage?: string | undefined;
-  articleDate?: string | undefined;
-  viewTransition: boolean;
+	title: string;
+	description?: string;
+	ogImage?: string | undefined;
+	articleDate?: string | undefined;
+	viewTransition: boolean;
 }
 
 const {
-  title,
-  description = siteConfig.seo.description,
-  ogImage,
-  articleDate,
-  viewTransition = true,
+	title,
+	description = siteConfig.seo.description,
+	ogImage,
+	articleDate,
+	viewTransition = true,
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const socialImageURL = new URL(
-  ogImage ? ogImage : "/open-graph.webp",
-  Astro.url
+	ogImage ? ogImage : "/open-graph.webp",
+	Astro.url,
 ).href;
 
 const titleSeparator = "•";
 
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.companyName}`;
-
-
 
 const googleAnalyticsId = import.meta.env.VITE_GOOGLE_ANALYTICS_ID;
 ---
@@ -42,8 +40,8 @@ const googleAnalyticsId = import.meta.env.VITE_GOOGLE_ANALYTICS_ID;
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <!-- Favicon -->
-  <!-- <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
+  <!-- <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="shortcut icon" href="/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="SIMTEC" />
