--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @theme {
   --color-primary-red: #8b1d20;
@@ -17,42 +17,47 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentcolor);
-  }
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentcolor);
+	}
 }
 
 @layer base {
-  body {
-    @apply font-sans;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    @apply font-bold;
-  }
+	/* body {
+		@apply font-sans;
+	} */
+
+	/* h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		@apply font-bold;
+	} */
 }
 
 @keyframes pulse {
-  0% {
-    transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(139, 29, 32, 0.7);
-  }
-  
-  70% {
-    transform: scale(1.02);
-    box-shadow: 0 0 0 10px rgba(139, 29, 32, 0);
-  }
-  
-  100% {
-    transform: scale(1);
-    box-shadow: 0 0 0 0 rgba(139, 29, 32, 0);
-  }
+	0% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(139, 29, 32, 0.7);
+	}
+
+	70% {
+		transform: scale(1.02);
+		box-shadow: 0 0 0 10px rgba(139, 29, 32, 0);
+	}
+
+	100% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(139, 29, 32, 0);
+	}
 }
 
 .animate-pulse {
-  animation: pulse 2s infinite;
+	animation: pulse 2s infinite;
 }
